add changepassword views

--- a/activitygo/activity/templates/changepassword.html
+++ b/activitygo/activity/templates/changepassword.html
@@ -3,14 +3,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title></title>
+    <title>修改密码</title>
 </head>
 
 <body>
-<h1>welcome {{username}} !</h1>
+<h1>修改密码页面：</h1>
+<form method = 'post' enctype="multipart/form-data">
+    {% csrf_token %}
+    {{cpf.as_p}}
+    <input type="submit" value = "ok" />
+</form>
 <br>
-<a href="http://127.0.0.1:8000/changepassword/">修改密码</a>
-<br>
-<a href="http://127.0.0.1:8000/logout/">退出</a>
+<a href="http://127.0.0.1:8000/index/">修改</a>
 </body>
 </html>
