--- a/activitygo/activity/templates/index.html
+++ b/activitygo/activity/templates/index.html
@@ -9,8 +9,15 @@
 <body>
 <h1>welcome {{username}} !</h1>
 <br>
-<a href="http://127.0.0.1:8000/changepassword/">修改密码</a>
+<a href="/showinfo">查看信息</a>
 <br>
-<a href="http://127.0.0.1:8000/logout/">退出</a>
+<a href="/changepassword">修改密码</a>
+<br>
+<a href="/changeemail">修改邮箱</a>
+<br>
+<a href="/changephone">修改电话</a>
+<br>
+<a href="/logout">退出</a>
+
 </body>
 </html>
