--- a/activitygo/activity/templates/changepassword.html
+++ b/activitygo/activity/templates/changepassword.html
@@ -14,6 +14,6 @@
     <input type="submit" value = "ok" />
 </form>
 <br>
-<a href="http://127.0.0.1:8000/index/">修改</a>
+<a href="/index">返回</a>
 </body>
 </html>
