--- a/activitygo/activity/templates/login.html
+++ b/activitygo/activity/templates/login.html
@@ -14,6 +14,6 @@
     <input type="submit" value = "ok" />
 </form>
 <br>
-<a href="http://127.0.0.1:8000/regist/">注册</a>
+<a href="/regist">注册</a>
 </body>
 </html>
