--- a/activitygo/activity/templates/showinfo.html
+++ b/activitygo/activity/templates/showinfo.html
@@ -3,17 +3,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>注册</title>
+    <title>查看信息</title>
 </head>
 
 <body>
-<h1>注册页面：</h1>
-<form method = 'post' enctype="multipart/form-data">
-    {% csrf_token %}
-    {{uf.as_p}}
-    <input type="submit" value = "ok" />
-</form>
+<h1>查看信息页面：</h1>
+{% csrf_token %}
+    
+    <p>username:{{sif.username}}</p>
+    <p>email:{{sif.email}}</p>
+    <p>phone:{{sif.phone}}</p>
+   
 <br>
-<a href="/login">登陆</a>
+<a href="/index">返回</a>
 </body>
 </html>
