--- a/activitygo/activity/templates/joinactivity.html
+++ b/activitygo/activity/templates/joinactivity.html
@@ -3,23 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title></title>
+    <title>参与活动</title>
 </head>
 
 <body>
-<h1>welcome {{username}} !</h1>
+<h1>参与活动页面：</h1>
+<p>报名、查看、检索</p>
 <br>
-<a href="/showinfo">查看信息</a>
-<br>
-<a href="/changepassword">修改密码</a>
-<br>
-<a href="/changeemail">修改邮箱</a>
-<br>
-<a href="/changephone">修改电话</a>
-<br>
-<a href="/manageactivity">活动管理</a>
-<br>
-<a href="/logout">退出</a>
+<a href="/manageactivity">返回</a>
 
 </body>
 </html>
