--- a/activitygo/activity/templates/manageactivity.html
+++ b/activitygo/activity/templates/manageactivity.html
@@ -3,23 +3,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title></title>
+    <title>活动管理</title>
 </head>
 
 <body>
-<h1>welcome {{username}} !</h1>
+<h1>活动管理页面：</h1>
 <br>
-<a href="/showinfo">查看信息</a>
+<a href="/myactivity">我的活动</a>
 <br>
-<a href="/changepassword">修改密码</a>
+<a href="/organizeactivity">发起活动</a>
 <br>
-<a href="/changeemail">修改邮箱</a>
+<a href="/joinactivity">参与活动</a>
 <br>
-<a href="/changephone">修改电话</a>
-<br>
-<a href="/manageactivity">活动管理</a>
-<br>
-<a href="/logout">退出</a>
+<a href="/index">返回</a>
 
 </body>
 </html>
