--- a/activitygo/activity/templates/myactivity.html
+++ b/activitygo/activity/templates/myactivity.html
@@ -3,23 +3,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title></title>
+    <title>我的活动</title>
 </head>
 
 <body>
-<h1>welcome {{username}} !</h1>
+<h1>我的活动：</h1>
+<p>我发起的活动：</p>
+<p>我参与的活动：</p>
 <br>
-<a href="/showinfo">查看信息</a>
-<br>
-<a href="/changepassword">修改密码</a>
-<br>
-<a href="/changeemail">修改邮箱</a>
-<br>
-<a href="/changephone">修改电话</a>
-<br>
-<a href="/manageactivity">活动管理</a>
-<br>
-<a href="/logout">退出</a>
+<a href="/manageactivity">返回</a>
 
 </body>
 </html>
