--- a/activitygo/activity/templates/index.html
+++ b/activitygo/activity/templates/index.html
@@ -5,6 +5,8 @@
 <br>
 <a href="/showinfo">查看信息</a>
 <br>
+<a href="/changeheadimg">修改头像</a>
+<br>
 <a href="/changepassword">修改密码</a>
 <br>
 <a href="/changeemail">修改邮箱</a>
