--- a/activitygo/activity/templates/joinactivity.html
+++ b/activitygo/activity/templates/joinactivity.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>参与活动</title>
-</head>
+{% extends "base.html" %}
 
-<body>
+{% block content %}
+
 <h1>参与活动页面：</h1>
 <p>报名、查看、检索</p>
 <br>
-<a href="/manageactivity">返回</a>
+<a href="/index">返回</a>
 
-</body>
-</html>
+{% endblock %}
