--- a/activitygo/activity/templates/base.html
+++ b/activitygo/activity/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link href="../static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/base.css" rel="stylesheet" type="text/css">
     <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
     <script src="../static/js/bootstrap.min.js" type="text/javascript"></script>
     
@@ -17,16 +18,22 @@
 		<div class="col-md-12 column">
 			<nav class="navbar navbar-default" role="navigation">
 				<div class="navbar-header">
-					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">Activity Go</a>
+					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="/index">Activity Go</a>
 				</div>
 				
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li class="active">
-							 <a href="#">我参与的活动</a>
+						<li>
+							 <a href="/joinactivity">参与活动</a>
 						</li>
 						<li>
-							 <a href="#">我组织的活动</a>
+							 <a href="/organizeactivity">组织活动</a>
+						</li>
+						<li>
+							 <a href="/me_joinactivity">我参与的活动</a>
+						</li>
+						<li>
+							 <a href="/me_organizeactivity">我组织的活动</a>
 						</li>
 					</ul>
 					<form class="navbar-form navbar-left" role="search">
@@ -35,20 +42,33 @@
 						</div> <button type="submit" class="btn btn-default">Submit</button>
 					</form>
 					<ul class="nav navbar-nav navbar-right">
+					    <li>
+							 <a href="/index">主页</a>
+						</li>
 						<li class="dropdown">
 							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{username}}<strong class="caret"></strong></a>
 							<ul class="dropdown-menu">
 								<li>
-									 <a href="#">个人信息</a>
+									 <a href="/showinfo">个人信息</a>
+								</li>
+								<li class="divider">
 								</li>
 								<li>
-									 <a href="#">修改密码</a>
+									 <a href="/changeheadimg">修改头像</a>
 								</li>
 								<li>
-									 <a href="#">修改邮箱</a>
+									 <a href="/changepassword">修改密码</a>
 								</li>
 								<li>
-									 <a href="#">登出</a>
+									 <a href="/changeemail">修改邮箱</a>
+								</li>
+								<li>
+									 <a href="/changephone">修改电话</a>
+								</li>
+								<li class="divider">
+								</li>
+								<li>
+									 <a href="/logout">登出</a>
 								</li>
 								
 							</ul>
@@ -57,12 +77,12 @@
 				</div>
 				
 			</nav>
+			 {% block content %}
+            {% endblock %}
 		</div>
 	</div>
-	<div>
-	    {% block content %}
-            {% endblock %}
-	</div>
+
+	   
 </div>
 
 </body>
