--- a/activitygo/activity/templates/changeemail.html
+++ b/activitygo/activity/templates/changeemail.html
@@ -1,18 +1,21 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>修改邮箱</title>
-</head>
+{% extends "base.html" %}
 
-<body>
-<h1>修改邮箱页面：</h1>
-<form method = 'post' enctype="multipart/form-data">
+{% block content %}
+
+
+<form id="changeinfo" class="form-horizontal" role="form" method = 'post' enctype="multipart/form-data">
     {% csrf_token %}
-    {{cef.as_p}}
-    <input type="submit" value = "ok" />
+    <div class="form-group">
+        <label class="col-sm-offset-2 col-sm-2 control-label">New Email</label>
+					<div class="col-sm-3">
+						<input type="email" class="form-control" name="newemail" />
+					</div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-5 col-sm-10">
+            <button type="submit" class="btn btn-default">修改</button>
+        </div>
+    </div>
 </form>
-<br>
-<a href="/index">返回</a>
-</body>
-</html>
+
+{% endblock %}
