--- a/activitygo/activity/templates/changeheadimg.html
+++ b/activitygo/activity/templates/changeheadimg.html
@@ -1,19 +1,21 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>修改头像</title>
-</head>
+{% extends "base.html" %}
 
-<body>
-<h1>修改头像页面：</h1>
-<form method = 'post' enctype="multipart/form-data">
+{% block content %}
+
+<form id="changeinfo" class="form-horizontal" role="form" method = 'post' enctype="multipart/form-data">
     {% csrf_token %}
-    {{chif.as_p}}
-    <input type="submit" value = "ok" />
+    <div class="form-group">
+        <label class="col-sm-offset-2 col-sm-2 control-label">HeadImage</label>
+        <div class="col-sm-3">
+				{{chif.newheadimg}}
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-5 col-sm-10">
+            <button type="submit" class="btn btn-default">修改</button>
+        </div>
+    </div>
 </form>
-<br>
-<a href="/index">返回</a>
-</body>
-</html>
+
+
+{% endblock %}
