--- a/activitygo/activity/templates/regist.html
+++ b/activitygo/activity/templates/regist.html
@@ -1,18 +1,46 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>注册</title>
-</head>
+{% extends "base_nouser.html" %}
 
-<body>
-<h1>注册页面：</h1>
-<form method = 'post' enctype="multipart/form-data">
-    {% csrf_token %}
-    {{uf.as_p}}
-    <input type="submit" value = "ok" />
+{% block content %}
+
+<form id="regist" class="form-horizontal" role="form" method = 'post' enctype="multipart/form-data">
+            {% csrf_token %}
+				<div class="form-group">
+					 <label title="仅限输入英文和数字" class="col-sm-offset-2 col-sm-2 control-label">Username</label>
+					<div class="col-sm-3">
+						<input title="仅限输入英文和数字" onkeyup="value=value.replace(/[\W]/g,'') " onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\d]/g,''))" class="form-control" name="username" />
+					</div>
+				</div>
+				<div class="form-group">
+					 <label class="col-sm-offset-2 col-sm-2 control-label">Password</label>
+					<div class="col-sm-3">
+						<input type="password" class="form-control" name="password" />
+					</div>
+				</div>
+				<div class="form-group">
+					 <label class="col-sm-offset-2 col-sm-2 control-label">Email</label>
+					<div class="col-sm-3">
+						<input type="email" class="form-control" name="email" />
+					</div>
+				</div>
+				<div class="form-group">
+					 <label title="仅限输入数字" class="col-sm-offset-2 col-sm-2 control-label">Phone</label>
+					<div class="col-sm-3">
+						<input title="仅限输入数字" onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')" class="form-control" name="phone" />
+					</div>
+				</div>
+				<div class="form-group">
+					 <label class="col-sm-offset-2 col-sm-2 control-label">HeadImage</label>
+					<div class="col-sm-3">
+						{{uf.headImg}}
+					</div>
+				</div>
+				
+				<div class="form-group">
+					<div class="col-sm-offset-5 col-sm-10">
+						 <button type="submit" class="btn btn-default">注册</button>
+					</div>
+				</div>
 </form>
-<br>
-<a href="/login">登陆</a>
-</body>
-</html>
+
+
+{% endblock %}
