--- a/activitygo/activity/templates/showinfo.html
+++ b/activitygo/activity/templates/showinfo.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>查看信息</title>
-</head>
+{% extends "base.html" %}
 
-<body>
-<h1>查看信息页面：</h1>
+{% block content %}
 {% csrf_token %}
     <img src="/{{sif.headImg}}">
     <p>username:{{sif.username}}</p>
@@ -15,5 +9,6 @@
    
 <br>
 <a href="/index">返回</a>
-</body>
-</html>
+
+
+{% endblock %}
