--- a/activitygo/activity/templates/index_nouser.html
+++ b/activitygo/activity/templates/index_nouser.html
@@ -2,8 +2,72 @@
 
 {% block content %}
 
-<h1>欢迎你，陌生人</h1>
-
+<div class="jumbotron">
+				<h1>
+					欢迎你，陌生人！
+				</h1>
+				<p>
+					在这里，你可以浏览来自世界各地的人创建的各种活动，如果你有兴趣加入其中的话，注册成为我们的会员就可以加入他们啦！
+				</p>
+				<p>
+					 <a class="btn btn-primary btn-large" href="/regist">注册</a>
+				</p>
+			</div>
+			<table class="table table-striped table-hover">
+				<thead>
+					<tr>
+						<th>
+							活动名称
+						</th>
+						<th>
+							活动时间
+						</th>
+						<th>
+							活动地点
+						</th>
+						
+					</tr>
+				</thead>
+				<tbody>
+				{% for act in all_activities %}
+					<tr>
+						<td>
+							{{act.aname}}
+						</td>
+						<td>
+							{{act.adate}}
+						</td>
+						<td>
+							{{act.alocation}}
+						</td>
+					
+					</tr>
+				{% endfor %}
+				</tbody>
+			</table>
+			<ul class="pagination">
+				<li>
+					 <a href="#">Prev</a>
+				</li>
+				<li>
+					 <a href="#">1</a>
+				</li>
+				<li>
+					 <a href="#">2</a>
+				</li>
+				<li>
+					 <a href="#">3</a>
+				</li>
+				<li>
+					 <a href="#">4</a>
+				</li>
+				<li>
+					 <a href="#">5</a>
+				</li>
+				<li>
+					 <a href="#">Next</a>
+				</li>
+			</ul>
 
 
 
