--- a/activitygo/activity/templates/me_organizeactivity.html
+++ b/activitygo/activity/templates/me_organizeactivity.html
@@ -4,6 +4,38 @@
 
 
 <p>我组织的活动：</p>
+<table class="table table-striped table-hover">
+	<thead>
+		<tr>
+			<th>
+				活动名称
+			</th>
+			<th>
+				活动时间
+			</th>
+			<th>
+				活动地点
+			</th>
+						
+		</tr>
+	</thead>
+	<tbody>
+	{% for act in acts %}
+		<tr>
+			<td>
+				{{act.aname}}
+			</td>
+			<td>
+				{{act.adate}}
+			</td>
+			<td>
+				{{act.alocation}}
+			</td>
+					
+		</tr>
+	{% endfor %}
+	</tbody>
+</table>
 <br>
 <a href="/index">返回</a>
 
