add credit to db

--- a/activitygo/activity/templates/showinfo.html
+++ b/activitygo/activity/templates/showinfo.html
@@ -6,6 +6,7 @@
     <p>username:{{sif.username}}</p>
     <p>email:{{sif.email}}</p>
     <p>phone:{{sif.phone}}</p>
+    <p>credit:{{sif.credit}}</p>
    
 <br>
 <a href="/index">返回</a>
