--- a/activitygo/activity/templates/base.html
+++ b/activitygo/activity/templates/base.html
@@ -36,11 +36,20 @@
 							 <a href="/me_organizeactivity">我组织的活动</a>
 						</li>
 					</ul>
-					<form class="navbar-form navbar-left" role="search">
+
+					<form  class="navbar-form navbar-left" role="search" method="GET" enctype="multipart/form-data">
+					
 						<div class="form-group">
-							<input type="text" class="form-control" />
-						</div> <button type="submit" class="btn btn-default">Submit</button>
+						
+							<input type="text" class="form-control" name = "a">
+						
+
+						</div> 
+						
+						<button type="submit" class="btn btn-default">查询</button>
+						
 					</form>
+					
 					<ul class="nav navbar-nav navbar-right">
 					    <li>
 							 <a href="/index">主页</a>
