some simple style

--- a/activitygo/activity/templates/index_nouser.html
+++ b/activitygo/activity/templates/index_nouser.html
@@ -10,7 +10,7 @@
 					在这里，你可以浏览来自世界各地的人创建的各种活动，如果你有兴趣加入其中的话，注册成为我们的会员就可以加入他们啦！
 				</p>
 				<p>
-					 <a class="btn btn-primary btn-large" href="/regist">注册</a>
+					 <a class="btn btn-primary btn-large" href="/list">检索</a>
 				</p>
 			</div>
 			<table class="table table-striped table-hover">
