--- a/activitygo/activity/templates/index.html
+++ b/activitygo/activity/templates/index.html
@@ -2,8 +2,73 @@
 
 {% block content %}
 
-<!-- {% csrf_token %} -->
-<h1>welcome {{username}} !</h1>
+ {% csrf_token %} 
+<div class="jumbotron">
+				<h1>
+					欢迎你，{{username}}！
+				</h1>
+				<p>
+					在这里，你可以浏览来自世界各地的人创建的各种活动，可以加入到丰富多彩的活动中，更可以创建活动等待别人的参与！
+				</p>
+				<p>
+					 <a class="btn btn-primary btn-large" href="/list">检索</a>
+				</p>
+			</div>
+			<table class="table table-striped table-hover">
+				<thead>
+					<tr>
+						<th>
+							活动名称
+						</th>
+						<th>
+							活动时间
+						</th>
+						<th>
+							活动地点
+						</th>
+						
+					</tr>
+				</thead>
+				<tbody>
+				{% for act in all_activities %}
+					<tr>
+						<td>
+							{{act.aname}}
+						</td>
+						<td>
+							{{act.adate}}
+						</td>
+						<td>
+							{{act.alocation}}
+						</td>
+					
+					</tr>
+				{% endfor %}
+				</tbody>
+			</table>
+			<ul class="pagination">
+				<li>
+					 <a href="#">Prev</a>
+				</li>
+				<li>
+					 <a href="#">1</a>
+				</li>
+				<li>
+					 <a href="#">2</a>
+				</li>
+				<li>
+					 <a href="#">3</a>
+				</li>
+				<li>
+					 <a href="#">4</a>
+				</li>
+				<li>
+					 <a href="#">5</a>
+				</li>
+				<li>
+					 <a href="#">Next</a>
+				</li>
+			</ul>
 
 
 
