--- a/activitygo/activity/templates/joinactivity.html
+++ b/activitygo/activity/templates/joinactivity.html
@@ -2,9 +2,67 @@
 
 {% block content %}
 
-<h1>参与活动页面：</h1>
-<p>报名、查看、检索</p>
-<br>
-<a href="/index">返回</a>
+{% csrf_token %} 
+			<table class="table table-striped table-hover">
+				<thead>
+					<tr>
+						<th>
+							活动名称
+						</th>
+						<th>
+							活动时间
+						</th>
+						<th>
+							活动地点
+						</th>
+						<th>
+						    参加活动
+						</th>
+						
+					</tr>
+				</thead>
+				<tbody>
+				{% for act in all_activities %}
+					<tr>
+						<td>
+							{{act.aname}}
+						</td>
+						<td>
+							{{act.adate}}
+						</td>
+						<td>
+							{{act.alocation}}
+						</td>
+						<td>
+						    <button type="button" class="btn btn-default">JOIN!</button>
+						</td>
+					
+					</tr>
+				{% endfor %}
+				</tbody>
+			</table>
+			<ul class="pagination">
+				<li>
+					 <a href="#">Prev</a>
+				</li>
+				<li>
+					 <a href="#">1</a>
+				</li>
+				<li>
+					 <a href="#">2</a>
+				</li>
+				<li>
+					 <a href="#">3</a>
+				</li>
+				<li>
+					 <a href="#">4</a>
+				</li>
+				<li>
+					 <a href="#">5</a>
+				</li>
+				<li>
+					 <a href="#">Next</a>
+				</li>
+			</ul>
 
 {% endblock %}
