join activity(no pretty views)

--- a/activitygo/activity/templates/joinactivity.html
+++ b/activitygo/activity/templates/joinactivity.html
@@ -34,7 +34,7 @@
 							{{act.alocation}}
 						</td>
 						<td>
-						    <button type="button" class="btn btn-default">JOIN!</button>
+						    <a href="{% url 'join' id=act.id %}">JOIN!</a>
 						</td>
 					
 					</tr>
