finish pagination; display activity detail; improve style

--- a/activitygo/activity/templates/base.html
+++ b/activitygo/activity/templates/base.html
@@ -35,6 +35,9 @@
 						<li>
 							 <a href="/me_organizeactivity">我组织的活动</a>
 						</li>
+						<li>
+							 <a href="/list">检索</a>
+						</li>
 					</ul>
 
 				
