--- a/activitygo/activity/templates/organizeactivity.html
+++ b/activitygo/activity/templates/organizeactivity.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-
+<h1>组织活动</h1>
 <form id="organizeactivity" class="form-horizontal" role="form" method = 'post' enctype="multipart/form-data">
             {% csrf_token %}
 				<div class="form-group">
