--- a/activitygo/activity/templates/changeemail.html
+++ b/activitygo/activity/templates/changeemail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-
+<h1>修改邮箱</h1>
 <form id="changeinfo" class="form-horizontal" role="form" method = 'post' enctype="multipart/form-data">
     {% csrf_token %}
     <div class="form-group">
