--- a/activitygo/activity/templates/changephone.html
+++ b/activitygo/activity/templates/changephone.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<h1>修改电话</h1>
 
 <form id="changeinfo" class="form-horizontal" role="form" method = 'post' enctype="multipart/form-data">
     {% csrf_token %}
