--- a/activitygo/activity/templates/index_nouser.html
+++ b/activitygo/activity/templates/index_nouser.html
@@ -10,7 +10,7 @@
 					在这里，你可以浏览来自世界各地的人创建的各种活动，如果你有兴趣加入其中的话，注册成为我们的会员就可以加入他们啦！
 				</p>
 				<p>
-					 <a class="btn btn-primary btn-large" href="/list">检索</a>
+					 <a class="btn btn-primary btn-large" href="/regist">注册</a>
 				</p>
 			</div>
 			<table class="table table-striped table-hover">
@@ -29,46 +29,42 @@
 					</tr>
 				</thead>
 				<tbody>
-				{% for act in all_activities %}
-					<tr>
+				{% for post in posts %} 
+					<tr class="info">
 						<td>
-							{{act.aname}}
+							<a href="{% url 'detail' id=post.id %}" title="点击查看活动详情">{{post.aname}}</a>
 						</td>
 						<td>
-							{{act.adate}}
+							{{post.adate}}
 						</td>
 						<td>
-							{{act.alocation}}
+							{{post.alocation}}
 						</td>
 					
 					</tr>
 				{% endfor %}
 				</tbody>
 			</table>
-			<ul class="pagination">
-				<li>
-					 <a href="#">Prev</a>
-				</li>
-				<li>
-					 <a href="#">1</a>
-				</li>
-				<li>
-					 <a href="#">2</a>
-				</li>
-				<li>
-					 <a href="#">3</a>
-				</li>
-				<li>
-					 <a href="#">4</a>
-				</li>
-				<li>
-					 <a href="#">5</a>
-				</li>
-				<li>
-					 <a href="#">Next</a>
-				</li>
-			</ul>
-
+		 
+<div class="text-center">
+<!-- 如果当前是第一页，就不显示【上一页】链接 -->
+       <h4>  
+        {% ifnotequal curPage 1 %}  
+            <a href="?curPage={{ curPage }}&&allPage={{ allPage }}&&pageType=pageUp">  
+                上一页  
+            </a>  
+        {% endifnotequal %}   
+  
+        第{{ curPage }}/{{ allPage }}页 
+  
+         <!-- 如果当前是最后一页，就不显示【下一页】链接 -->  
+        {% ifnotequal curPage allPage %}  
+            <a href="?curPage={{ curPage }}&&allPage={{ allPage }}&&pageType=pageDown">  
+                下一页  
+            </a>  
+        {% endifnotequal %}  
+        </h4>
+</div>
 
 
 {% endblock %}
