--- a/activitygo/activity/templates/list.html
+++ b/activitygo/activity/templates/list.html
@@ -1,43 +1,93 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>django表单处理</title>
-  <style type="text/css">
-    body, div {
-      padding: 0;
-      margin: 0;
-    }
-    #container {
-      width: 1070px;
-      margin: 0 auto;
-    }
-    .wrap {
-      width: 360px;
-      height: 48px;
-      margin: 0 auto;
-    }
-    .wrap form input {
-      width: 240px;
-      height: 24px;
-      margin-top: 12px;
-    }
-  </style>
-</head>
-<body>
-  <div id="container">
-    <div class="wrap">
-      <form action="." class="crawl" method="GET">
-        <input type="text" name="a">
-        <button type="submit">
-          提交
-        </button>
-      </form>
+{% extends "base.html" %}
 
-      {% if results %}
-        <h2>{{ results }}</h2>
-      {% endif %}
-    </div>
-  </div>
-</body>
-</html>
+{% block content %}
+{% csrf_token %}
+
+  <form role="form" action="." method="GET">
+				<div class="form-group">
+					 <label>Search Contents</label><input type="text" class="form-control" name="searchcontents" />
+				</div>
+				
+				<button type="submit" class="btn btn-default">搜索</button>
+			</form>
+			
+			<div class="form-group">
+<!--			    保持间隔-->
+			</div>
+			
+{% if acts %}
+      
+      <table class="table table-striped table-hover">
+				<thead>
+					<tr>
+						<th>
+							活动名称
+						</th>
+						<th>
+							活动时间
+						</th>
+						<th>
+							活动地点
+						</th>
+						
+					</tr>
+				</thead>
+				<tbody>
+				{% for post in posts %}
+					<tr class="info">
+						<td>
+							<a href="{% url 'detail' id=post.id %}" title="点击查看活动详情">{{post.aname}}</a>
+						</td>
+						<td>
+							{{post.adate}}
+						</td>
+						<td>
+							{{post.alocation}}
+						</td>
+					
+					</tr>
+				{% endfor %}
+				</tbody>
+			</table>
+			<div class="text-center">
+<!-- 如果当前是第一页，就不显示【上一页】链接 -->
+       <h4>  
+        {% ifnotequal curPage 1 %}  
+            <a href="?curPage={{ curPage }}&&allPage={{ allPage }}&&pageType=pageUp">  
+                上一页  
+            </a>  
+        {% endifnotequal %}   
+  
+        第{{ curPage }}/{{ allPage }}页 
+  
+         <!-- 如果当前是最后一页，就不显示【下一页】链接 -->  
+        {% ifnotequal curPage allPage %}  
+            <a href="?curPage={{ curPage }}&&allPage={{ allPage }}&&pageType=pageDown">  
+                下一页  
+            </a>  
+        {% endifnotequal %}  
+        </h4>
+</div>
+   {% else %}
+    {% if startflag %}
+    <div class="jumbotron">
+				<h1>
+					欢迎使用检索功能，{{username}}！
+				</h1>
+				<p>
+					您可以输入您感兴趣的内容进行搜索，我们会为您呈现相关的活动！
+				</p>
+			</div>
+    
+    {% else %}
+    <div class="jumbotron">
+				<h1>
+					很抱歉，{{username}}！
+				</h1>
+				<p>
+					目前还没有您搜索内容相关的活动，您可以尝试搜索其他您感兴趣的内容！
+				</p>
+			</div>
+     {% endif %}
+   {% endif %}   
+{% endblock %}
