--- a/activitygo/activity/templates/me_organizeactivity.html
+++ b/activitygo/activity/templates/me_organizeactivity.html
@@ -3,7 +3,10 @@
 {% block content %}
 
 
-<p>我组织的活动：</p>
+<h1>我组织的活动</h1>
+
+{% if act_flag %}
+
 <table class="table table-striped table-hover">
 	<thead>
 		<tr>
@@ -20,23 +23,55 @@
 		</tr>
 	</thead>
 	<tbody>
-	{% for act in acts %}
-		<tr>
+	{% for post in posts %}
+		<tr class="info">
 			<td>
-				{{act.aname}}
+				<a href="{% url 'detail' id=post.id %}" title="点击查看活动详情">{{post.aname}}</a>
 			</td>
 			<td>
-				{{act.adate}}
+				{{post.adate}}
 			</td>
 			<td>
-				{{act.alocation}}
+				{{post.alocation}}
 			</td>
 					
 		</tr>
 	{% endfor %}
 	</tbody>
 </table>
-<br>
-<a href="/index">返回</a>
+<div class="text-center">
+<!-- 如果当前是第一页，就不显示【上一页】链接 -->
+       <h4>  
+        {% ifnotequal curPage 1 %}  
+            <a href="?curPage={{ curPage }}&&allPage={{ allPage }}&&pageType=pageUp">  
+                上一页  
+            </a>  
+        {% endifnotequal %}   
+  
+        第{{ curPage }}/{{ allPage }}页 
+  
+         <!-- 如果当前是最后一页，就不显示【下一页】链接 -->  
+        {% ifnotequal curPage allPage %}  
+            <a href="?curPage={{ curPage }}&&allPage={{ allPage }}&&pageType=pageDown">  
+                下一页  
+            </a>  
+        {% endifnotequal %}  
+        </h4>
+</div>
+{% else %}
+<div class="jumbotron">
+				<h1>
+					啊哦，{{username}}！
+				</h1>
+				<p>
+					你还没有组织过活动哟，点击下面的按钮去发起一个好玩儿的活动吧！
+				</p>
+				<p>
+					 <a class="btn btn-primary btn-large" href="/organizeactivity">组织活动</a>
+				</p>
+			</div>
+
+{% endif %}
+
 
 {% endblock %}
