add activities status

--- a/activitygo/activity/templates/index_nouser.html
+++ b/activitygo/activity/templates/index_nouser.html
@@ -30,18 +30,20 @@
 				</thead>
 				<tbody>
 				{% for post in posts %} 
-					<tr class="info">
-						<td>
-							<a href="{% url 'detail_nouser' id=post.id %}" title="点击查看活动详情">{{post.aname}}</a>
-						</td>
-						<td>
-							{{post.adate}}
-						</td>
-						<td>
-							{{post.alocation}}
-						</td>
-					
-					</tr>
+					{% if post.astatus == 1 %}
+						<tr class="info">
+							<td>
+								<a href="{% url 'detail_nouser' id=post.id %}" title="点击查看活动详情">{{post.aname}}</a>
+							</td>
+							<td>
+								{{post.adate}}
+							</td>
+							<td>
+								{{post.alocation}}
+							</td>
+						
+						</tr>
+					{% endif %}
 				{% endfor %}
 				</tbody>
 			</table>
