--- a/activitygo/activity/templates/me_joinactivity.html
+++ b/activitygo/activity/templates/me_joinactivity.html
@@ -22,18 +22,19 @@
 	</thead>
 	<tbody>
 	{% for post in posts %}
-		<tr class="info">
-			<td>
-				<a href="{% url 'detail' id=post.id %}" title="点击查看活动详情">{{post.aname}}</a>
-			</td>
-			<td>
-				{{post.adate}}
-			</td>
-			<td>
-				{{post.alocation}}
-			</td>
-					
-		</tr>
+		{% if post.astatus == 1 %}
+			<tr class="info">
+				<td>
+					<a href="{% url 'detail' id=post.id %}" title="点击查看活动详情">{{post.aname}}</a>
+				</td>
+				<td>
+					{{post.adate}}
+				</td>
+				<td>
+					{{post.alocation}}
+				</td>		
+			</tr>
+		{% endif %}
 	{% endfor %}
 	</tbody>
 </table>
