--- a/activitygo/activity/templates/me_joinactivity.html
+++ b/activitygo/activity/templates/me_joinactivity.html
@@ -5,7 +5,7 @@
 
 <h1>我参与的活动</h1>
 
-<table>
+<table class="table table-striped table-hover">
 	<thead>
 		<tr>
 			<th>
@@ -22,7 +22,7 @@
 	</thead>
 	<tbody>
 	{% for post in posts %}
-		{% if post.astatus == 1 %}
+		{% if post.astatus %}
 			<tr class="info">
 				<td>
 					<a href="{% url 'detail' id=post.id %}" title="点击查看活动详情">{{post.aname}}</a>
@@ -38,5 +38,6 @@
 	{% endfor %}
 	</tbody>
 </table>
+
 
 {% endblock %}
