--- a/activitygo/activity/templates/me_organizeactivity.html
+++ b/activitygo/activity/templates/me_organizeactivity.html
@@ -19,12 +19,19 @@
 			<th>
 				活动地点
 			</th>
+            <th>
+                活动状态
+            </th>
 						
 		</tr>
 	</thead>
 	<tbody>
 	{% for post in posts %}
+	{% if post.astatus %}
 		<tr class="info">
+		 {% else %}
+		 <tr class="warning">
+		 {% endif %}
 			<td>
 				<a href="{% url 'detail' id=post.id %}" title="点击查看活动详情">{{post.aname}}</a>
 			</td>
@@ -34,6 +41,13 @@
 			<td>
 				{{post.alocation}}
 			</td>
+                <td>
+                    {% if post.astatus %}
+                    审核通过
+                    {% else %}
+                    正在审核
+                    {% endif %}
+                </td>
 					
 		</tr>
 	{% endfor %}
