--- a/activitygo/activity/templates/changepassword.html
+++ b/activitygo/activity/templates/changepassword.html
@@ -14,8 +14,22 @@
     <div class="form-group">
         <label class="col-sm-offset-2 col-sm-2 control-label">New Password</label>
         <div class="col-sm-3">
-            <input type="password" class="form-control" name="newpassword" />
-    	</div>
+            <input title="请输入至少4个字符" type="password" class="form-control" name="newpassword" onKeyUp=pwStrength(this.value) onBlur=pwStrength(this.value) minlength="4" />
+            <br>密码强度:  
+            <table width="210" border="1" cellspacing="0" cellpadding="1" bordercolor="#eeeeee" height="22" style='display:inline'>  
+            <tr align="center" bgcolor="#f5f5f5">  
+                <td width="33%" id="strength_L">弱</td>  
+                <td width="33%" id="strength_M">中</td>  
+                <td width="33%" id="strength_H">强</td>  
+            </tr>  
+            </table>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-offset-2 col-sm-2 control-label">Check New Password</label>
+        <div class="col-sm-3">
+            <input type="password" class="form-control" name="checknewpassword" />
+        </div>
     </div>
     <div class="form-group">
         <div class="col-sm-offset-5 col-sm-10">
