--- a/activitygo/activity/templates/regist.html
+++ b/activitygo/activity/templates/regist.html
@@ -7,13 +7,27 @@
 				<div class="form-group">
 					 <label title="仅限输入英文和数字" class="col-sm-offset-2 col-sm-2 control-label">Username</label>
 					<div class="col-sm-3">
-						<input title="仅限输入英文和数字" onkeyup="value=value.replace(/[\W]/g,'') " onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\d]/g,''))" class="form-control" name="username" />
+						<input title="仅限输入英文和数字，请输入4-10个字符" onkeyup="value=value.replace(/[\W]/g,'') " onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\d]/g,''))" class="form-control" name="username" minlength="4" maxlength="10"/>
 					</div>
 				</div>
 				<div class="form-group">
 					 <label class="col-sm-offset-2 col-sm-2 control-label">Password</label>
 					<div class="col-sm-3">
-						<input type="password" class="form-control" name="password" />
+						<input title="请输入至少4个字符" type="password" class="form-control" name="password" onKeyUp=pwStrength(this.value) onBlur=pwStrength(this.value) minlength="4" />
+						<br>密码强度:  
+						<table width="210" border="1" cellspacing="0" cellpadding="1" bordercolor="#eeeeee" height="22" style='display:inline'>  
+						<tr align="center" bgcolor="#f5f5f5">  
+							<td width="33%" id="strength_L">弱</td>  
+							<td width="33%" id="strength_M">中</td>  
+							<td width="33%" id="strength_H">强</td>  
+						</tr>  
+						</table>
+					</div>
+				</div>
+				<div class="form-group">
+					 <label class="col-sm-offset-2 col-sm-2 control-label">CheckPassword</label>
+					<div class="col-sm-3">
+						<input title="请输入至少4个字符" type="password" class="form-control" name="checkpassword" onKeyUp=pwStrength(this.value) onBlur=pwStrength(this.value)/>
 					</div>
 				</div>
 				<div class="form-group">
