--- a/activitygo/activity/templates/changepassword.html
+++ b/activitygo/activity/templates/changepassword.html
@@ -2,7 +2,23 @@
 
 {% block content %}
 
+
+
 <h1>修改密码</h1>
+
+{% if changepasswordsuccess %}
+        <div class="alert alert-error">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <h4>修改成功，请记住您的密码</h4>
+        </div>
+    {% endif %}
+
+{% if isnotequal %}
+        <div class="alert alert-error">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <h4>修改失败，前后两次密码不同</h4>
+        </div>
+    {% endif %}  
 <form id="changeinfo" class="form-horizontal" role="form" method = 'post' enctype="multipart/form-data">
     {% csrf_token %}
     <div class="form-group">
