--- a/activitygo/activity/templates/regist.html
+++ b/activitygo/activity/templates/regist.html
@@ -2,18 +2,24 @@
 
 {% block content %}
 <h1>注册</h1>
+{% if isnotequal %}
+        <div class="alert alert-error">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <h4>错误!</h4>两次输入密码不一致
+        </div>
+    {% endif %}    
 <form id="regist" class="form-horizontal" role="form" method = 'post' enctype="multipart/form-data">
             {% csrf_token %}
 				<div class="form-group">
 					 <label title="仅限输入英文和数字" class="col-sm-offset-2 col-sm-2 control-label">Username</label>
 					<div class="col-sm-3">
-						<input title="仅限输入英文和数字，请输入4-10个字符" onkeyup="value=value.replace(/[\W]/g,'') " onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\d]/g,''))" class="form-control" name="username" minlength="4" maxlength="10"/>
+						<input title="仅限输入英文和数字，请输入4-10个字符" onkeyup="value=value.replace(/[\W]/g,'') " onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\d]/g,''))" class="form-control" name="username" pattern=".{4,10}"/>
 					</div>
 				</div>
 				<div class="form-group">
 					 <label class="col-sm-offset-2 col-sm-2 control-label">Password</label>
 					<div class="col-sm-3">
-						<input title="请输入至少4个字符" type="password" class="form-control" name="password" onKeyUp=pwStrength(this.value) onBlur=pwStrength(this.value) minlength="4" />
+						<input title="请输入至少4个字符" type="password" class="form-control" name="password" onKeyUp=pwStrength(this.value) onBlur=pwStrength(this.value) pattern=".{4,16}" />
 						<br>密码强度:  
 						<table width="210" border="1" cellspacing="0" cellpadding="1" bordercolor="#eeeeee" height="22" style='display:inline'>  
 						<tr align="center" bgcolor="#f5f5f5">  
