change all the alert way; add quit activity; iprove style

--- a/activitygo/activity/templates/changepassword.html
+++ b/activitygo/activity/templates/changepassword.html
@@ -18,6 +18,12 @@
             <button type="button" class="close" data-dismiss="alert">×</button>
             <h4>修改失败，前后两次密码不同</h4>
         </div>
+    {% endif %} 
+    {% if isnotop %}
+        <div class="alert alert-error">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <h4>修改失败，原密码错误</h4>
+        </div>
     {% endif %}  
 <form id="changeinfo" class="form-horizontal" role="form" method = 'post' enctype="multipart/form-data">
     {% csrf_token %}
