--- a/activitygo/activity/templates/index.html
+++ b/activitygo/activity/templates/index.html
@@ -31,8 +31,18 @@
 				</thead>
 				<tbody>
 				{% for post in posts %}
-					{% if post.astatus == 1 %}
-						<tr class="info">
+<!--					{% if post.astatus %}-->
+					
+					<tr class="info">
+					    {% for par in post.aparticipants.all %}
+                        
+					        {% ifequal username par.username %}
+                                
+						        <tr class="warning">
+                            
+                            {% endifequal %}
+                            
+                        {% endfor %}
 							<td>
 								<a href="{% url 'detail' id=post.id %}" title="点击查看活动详情">{{post.aname}}</a>
 							</td>
@@ -44,7 +54,7 @@
 							</td>
 						
 						</tr>
-					{% endif %}
+<!--					{% endif %}-->
 				{% endfor %}
 				</tbody>
 			</table>
