--- a/activitygo/activity/templates/joinactivity.html
+++ b/activitygo/activity/templates/joinactivity.html
@@ -24,28 +24,18 @@
 				</thead>
 				<tbody>
 				{% for post in posts %}
-					{% if post.astatus %}
+<!--					{% if post.astatus %}-->
 					
-<!--
+                     <tr class="info">
 					    {% for par in post.aparticipants.all %}
                         
 					        {% ifequal username par.username %}
                                 
 						        <tr class="warning">
-                              {% with join_flag=1 %}
-                               {{join_flag}}
-                               {% endwith %}
+                            
                             {% endifequal %}
                             
                         {% endfor %}
--->
-                        
-<!--
-						    {% if join_flag %}
-						    {% else %}
--->
-						<tr class="info">
-<!--						    {% endif %}-->
 						
 							<td>
 								<a href="{% url 'detail' id=post.id %}" title="点击查看活动详情">{{post.aname}}</a>
@@ -61,7 +51,7 @@
 							</td>
 						
 						</tr>
-					{% endif %}
+<!--					{% endif %}-->
 				{% endfor %}
 				</tbody>
 			</table>
