--- a/activitygo/activity/templates/me_joinactivity.html
+++ b/activitygo/activity/templates/me_joinactivity.html
@@ -5,6 +5,21 @@
 
 <h1>我参与的活动</h1>
 
+{% if joinsuccess %}
+        <div class="alert alert-error">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <h4>加入成功</h4>
+        </div>
+    {% endif %} 
+{% if quitsuccess %}
+        <div class="alert alert-error">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <h4>退出成功</h4>
+        </div>
+    {% endif %} 
+
+{% if act_flag %}
+
 <table class="table table-striped table-hover">
 	<thead>
 		<tr>
@@ -17,12 +32,15 @@
 			<th>
 				活动地点
 			</th>
+                    <th>
+                        退出活动
+                    </th>
 						
 		</tr>
 	</thead>
 	<tbody>
 	{% for post in posts %}
-		{% if post.astatus %}
+<!--		{% if post.astatus %}-->
 			<tr class="info">
 				<td>
 					<a href="{% url 'detail' id=post.id %}" title="点击查看活动详情">{{post.aname}}</a>
@@ -32,12 +50,48 @@
 				</td>
 				<td>
 					{{post.alocation}}
-				</td>		
+				</td>
+                <td>
+					<a href="{% url 'quit' id=post.id %}" title="退出该活动">QUIT!</a>
+				</td>
+						
 			</tr>
-		{% endif %}
+<!--		{% endif %}-->
 	{% endfor %}
 	</tbody>
 </table>
+<div class="text-center">
+<!-- 如果当前是第一页，就不显示【上一页】链接 -->
+       <h4>  
+        {% ifnotequal curPage 1 %}  
+            <a href="?curPage={{ curPage }}&&allPage={{ allPage }}&&pageType=pageUp">  
+                上一页  
+            </a>  
+        {% endifnotequal %}   
+  
+        第{{ curPage }}/{{ allPage }}页 
+  
+         <!-- 如果当前是最后一页，就不显示【下一页】链接 -->  
+        {% ifnotequal curPage allPage %}  
+            <a href="?curPage={{ curPage }}&&allPage={{ allPage }}&&pageType=pageDown">  
+                下一页  
+            </a>  
+        {% endifnotequal %}  
+        </h4>
+</div>
+{% else %}
+<div class="jumbotron">
+				<h1>
+					啊哦，{{username}}！
+				</h1>
+				<p>
+					你还没有参加任何活动哦，点击下面的按钮去参加一个好玩儿的活动吧！
+				</p>
+				<p>
+					 <a class="btn btn-primary btn-large" href="/joinactivity">参与活动</a>
+				</p>
+			</div>
 
+{% endif %}
 
 {% endblock %}
