--- a/activitygo/activity/templates/joinactivity.html
+++ b/activitygo/activity/templates/joinactivity.html
@@ -4,6 +4,12 @@
 
 {% csrf_token %} 
         <h1>参与活动</h1>
+        {% if alreadyjoin %}
+        <div class="alert alert-error">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <h4>您已经加入过这个活动了!</h4>
+        </div>
+    {% endif %} 
 			<table class="table table-striped table-hover">
 				<thead>
 					<tr>
